--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
-*.m linguist-language=PowerQuery
-* text=auto
+*.pq linguist-language=M Script
+*.m linguist-language=M Script
