--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
-*.pq linguist-language=M Script
-*.m linguist-language=M Script
+*.pq linguist-language = m
+*.m linguist-language = m
